# ardop

./: README.txt  boards.txt  platform.txt
ARDOP1OFDM/: ARDOP1OFDM.map  ARDOP1OFDM.txt  ARDOP1OFDM.vcproj  ARDOPC.c  ARDOPC.h  UpgradeLog.htm
ARDOP1OFDM_Teensy/: ARDOP1OFDM_Teensy.ino  TeensyWrapper.c
ARDOP2/: ARDOP2.sln  ARDOP2.vcproj  ARDOPC.c  ARDOPC.c.bak  ARDOPC.h  ARDOPC.map  BusyDetect.c  CalcTemplates.c  FEC.c  HostInterface.c  KISSModule.c  Makefile  Modulate.c  Modulate.c.bak  SCSHostInterface.c  SoundInput.c  TCPHostInterface.c.bak  Version.h  ardopSampleArrays.c  ofdm.c  pktARDOP.c
ARDOP2_Teensy/: ARDOP2_Teensy.ino  TeensyWrapper.c
ARDOPC/: ARDOPC.c  ARDOPC.h  ARDOPC.vcproj  ARQ.c  BusyDetect.c  CMakeLists.txt  HostInterface.c  Makefile  Makefile_mingw32  Modulate.c  Modulate.c.bak  RXO.c  RXO.h  SCSHostInterface.c  SerialIntefaceSpec.html  SoundInput.c  TCPHostInterface-DESKTOP-MHE5LO8.c  TCPHostInterface.c  WinSerial.c  ardopSampleArrays.c
ARDOPC/ARDOP_PTC/: ARDOP_PTC.vcproj
ARDOPCommonCode/: ALSASound.c  ARDOPCommon.c  LinSerial.c  Waveout.c  ardopcommon.h  wav.c  wav.h
ARDOPOFDM/: ARDOPC.c  ARDOPC.h  ARDOPOFDM.vcproj  ARQ.c  BusyDetect.c  HostInterface.c  KISSModule.c  LinSerial.c  Makefile-skigdebian  Modulate.c  SCSHostInterface.c  SoundInput.c  UZ7HOCore.c  Version.h
ARDOPOFDM_Teensy/: ARDOPOFDM_Teensy.ino  TeensyWrapper.c
ARDOP_Teensy/: ARDOP_Teensy.ino  ARDOP_Teensy.ino.TEENSY36.hex  ARDOP_Teensy.ino.bak  TeensyWrapper.c
